springboot starter web

--- a/screenmatch/src/main/resources/application.properties
+++ b/screenmatch/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.format-sql=true
 
 #JPA tiene permiso para modificar la estructura de db
 spring.jpa.hibernate.ddl-auto=update
+
+#puerto de salida
+server.port=8084
