--- a/screenmatch/src/main/resources/application.properties
+++ b/screenmatch/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.url=jdbc:postgresql://localhost/alura_series
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 #ver querys en la consola
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
