--- a/screenmatch/src/main/resources/application.properties
+++ b/screenmatch/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 #puerto de salida
 server.port=8084
+
+#cors
+spring.web.cors.allowed-origins=http://127.0.0.1:5500,http://localhost:5500
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
